上传GREG-minimum 数据库

--- a/neo4j with R .ipynb
+++ b/neo4j with R .ipynb
@@ -58,6 +58,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When you want to install RNeo4j, you must to  confirm `git` and `Rtools` installed in your camputer. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###### from cran"
    ]
   },
@@ -202,14 +209,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step of Three packages driving neo4j is the same things to make connect neo4j informations that include URL, username and password."
+    "1. In this tutorial, we use `GREG-minimum` database as neo4j object. You can download `GREG-minimum`, unzip the file and copy to  `neo4j/data/databases` directory."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "1. Edite the following line in `conf/neo4j-server.properties`"
+    "2. Edite the following line in `neo4j/conf/neo4j.conf`:"
    ]
   },
   {
@@ -218,16 +230,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Set the name of the database to mount \n",
+    "dbms.active_database=GREG-minimum \n",
+    "\n",
     "# Require (or disable the requirement of) auth to access Neo4j\n",
-    "dbms.security.auth_enabled=false"
+    "dbms.security.auth_enabled=false  #Delete `#`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Delete `#`"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -275,6 +288,13 @@
    "outputs": [],
    "source": [
     "neo4j.bat console"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step of Three packages driving neo4j is the same things to make connect neo4j informations that include URL, username and password."
    ]
   },
   {
