--- a/neo4j with R .ipynb
+++ b/neo4j with R .ipynb
@@ -3730,7 +3730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Edite following line in `neo4j/conf/neo4j.cof`:"
+    "**1. Edite following line in `neo4j/conf/neo4j.cof`:**"
    ]
   },
   {
@@ -3748,7 +3748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Restart GREG/neo4j."
+    "**2. Restart GREG/neo4j.**"
    ]
   },
   {
@@ -3762,7 +3762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. we can use command to delete all data in this graph database."
+    "**1. we can use command to delete all data in this graph database.**"
    ]
   },
   {
@@ -3780,7 +3780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. you can delete `GREG/data/databases/4Dgenome` folder and restart neo4j."
+    "**2. you can delete `GREG/data/databases/4Dgenome` folder and restart neo4j.**"
    ]
   },
   {
@@ -3801,7 +3801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. delete NA at row and select 500 interaction for test."
+    "**1. delete NA at row and select 500 interaction for test.**"
    ]
   },
   {
@@ -3902,7 +3902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Build node csv file."
+    "**2. Build node csv file.**"
    ]
   },
   {
