--- a/neo4j with R .ipynb
+++ b/neo4j with R .ipynb
@@ -209,14 +209,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In this tutorial, we use `GREG-minimum` database as neo4j object. You can download [GREG-minimum](https://github.com/xiaowei3223/Neo4j-with-R-/raw/master/GREG-minimum.7z), unzip the file and copy to  `neo4j/data/databases` directory."
+    "1.In this tutorial, we use `GREG-minimum` database as neo4j object. You can download [GREG-minimum](https://github.com/xiaowei3223/Neo4j-with-R-/raw/master/GREG-minimum.7z), unzip the file and copy to  `neo4j/data/databases` directory."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Edite the following line in `neo4j/conf/neo4j.conf` file:"
+    "2.Edite the following line in `neo4j/conf/neo4j.conf` file:"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Use `win+R` and input `cmd` to open command-line interface in windows system.  change directory to `GREG\\bin`:"
+    "3.Use `win+R` and input `cmd` to open command-line interface in windows system.  change directory to `GREG\\bin`:"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step of Three packages driving neo4j is the same things to make connect neo4j informations that include URL, username and password."
+    "The first step of three packages driving neo4j is the same things to make connect neo4j informations that include URL, username and password."
    ]
   },
   {
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cypher query with R"
+    "# 4 Cypher query with R"
    ]
   },
   {
@@ -3755,7 +3755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### **Here proves two way to delete all data in graph database if you don't want edit `noe4j.conf` files.**"
+    "###### **Here proves two way to delete all data in graph database if you don't want edite `noe4j.conf` files.**"
    ]
   },
   {
@@ -4006,7 +4006,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Save as csv files."
+    "**3. Save as csv files.**"
    ]
   },
   {
@@ -4873,10 +4873,10 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "271.455px"
+    "width": "271.462px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
